catkin_ws/logs/backend/build.make.670.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::matchTwoFrames(const SLAM::Frame&, const SLAM::Frame&, bool&, bool&, Eigen::Isometry3d&, Eigen::Matrix<double, 6, 6>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:312:5: error: ‘filestore’ was not declared in this scope
     filestore.release();
     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:313:5: error: ‘filestore2’ was not declared in this scope
     filestore2.release();
     ^
make[2]: *** [CMakeFiles/frontend.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
